# muse_v2_driver

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  package.xml
config/: muse_calib.txt  muse_config.yaml  muse_v2_config.yaml
include/muse_v2_driver/: Calibration.h  Configuration.h  Memory.h  Miscellaneous.h  Muse.h  MuseV2.h  Stream.h
launch/: battery.launch  get_calibration_params.launch  get_configuration_params.launch  logger.launch  muse.launch  muse_v2.launch  plot.launch  raw_data_subscriber.launch  set_configuration_params.launch  shutdown.launch  start_transmission.launch  stop_transmission.launch
msg/: RosLog.msg  Transmission.msg
rviz/: imu_config.rviz
src/: battery.cpp  get_calibration_params.cpp  get_configuration_params.cpp  logger.cpp  muse.cpp  muse_v2.cpp  raw_data_subscriber.cpp  set_configuration_params.cpp  shutdown.cpp  start_transmission.cpp  stop_transmission.cpp
src/internal/: Calibration.cpp  Configuration.cpp  Memory.cpp  Miscellaneous.cpp  Muse.cpp  MuseV2.cpp  Stream.cpp
srv/: Battery.srv  Calibrate.srv  Disconnect.srv  GetCalibrationParams.srv  GetConfigurationParams.srv  MemoryManagement.srv  RawDataStreaming.srv  SetConfigurationParams.srv  Shutdown.srv  StopTransmission.srv
