<?xml version="1.0"?>
<package format="2">
	<name>muse_v2_driver</name>
	<version>0.0.0</version>
	<description>The driver package for the 221e MUltiSEnsor (MUSE) device</description>
	
	<maintainer email="elisa.tosello@221e.com">Elisa Tosello</maintainer>
	<maintainer email="roberto.bortoletto@221e.com">Roberto Bortoletto</maintainer>

	<license>BSD</license>

	<author email="elisa.tosello@221e.com">Elisa Tosello</author>
	<author email="roberto.bortoletto@221e.com">Roberto Bortoletto</author>


	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>roscpp</depend>
        <depend>message_generation</depend>  
        <depend>std_msgs</depend>
        <depend>sensor_msgs</depend>
        <depend>geometry_msgs</depend>
        <depend>diagnostic_msgs</depend>
        <depend>roslib</depend>
        <depend>tf</depend>
	
	<exec_depend>message_runtime</exec_depend>

</package>
