<?xml version="1.0"?>
<package format="2">
	<name>muse_v2_driver</name>
	<version>1.0.0</version>
	<description>ROS driver for the 221e MUltiSEnsor (MUSE) device</description>
	
	<maintainer email="info@221e.com">221e srl</maintainer>

	<license>BSD</license>

	<author email="">221e srl</author>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>roscpp</depend>
        <depend>message_generation</depend>  
        <depend>std_msgs</depend>
        <depend>sensor_msgs</depend>
        <depend>geometry_msgs</depend>
        <depend>diagnostic_msgs</depend>
        <depend>roslib</depend>
        <depend>tf</depend>
	
	<exec_depend>message_runtime</exec_depend>

</package>
